# task-cycler

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: release.yml
design/: design-philosophy.md
public/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
